<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="capture_time">Capture time</string>
    <string name="process_status">Processing status</string>
    <string name="customize_time">Custom time</string>
    <string name="seven_days">7days</string>
    <string name="three_days">3das</string>
    <string name="twentyfour_hours">24 h</string>
    <string name="Unlimited">Unlimited</string>
    <string name="capture_photo">Capture pic</string>
    <string name="control_photo">Cloth control picture</string>
    <string name="word_valid">Effective</string>
    <string name="word_unvalid">Invalid</string>
    <string name="warn_confirm">Confirm</string>
    <string name="external_type">Foreign</string>
    <string name="focus_type">Focus</string>
    <string name="invade_type">Intrusion</string>
    <string name="security_warn_result_type_title">Alert result type (required)</string>
    <string name="security_warn_des_title">Instruction manual</string>
    <string name="security_warn_des_hint">Please describe the actual situation of the warning event, input up to 100 characters.</string>
    <string name="security_warn_invalid">Invalid warning</string>
    <string name="security_warn_valid">Effective warning</string>
    <string name="security_warn_confirm_dialog_exit_button">Confirm exit</string>
    <string name="security_warn_confirm_dialog_exit_title">Whether to withdraw the warning confirmation</string>
    <string name="security_warn_confirm_dialog_upload_button">Confirmation report</string>
    <string name="security_warn_confirm_dialog_upload_title">Whether to report the %1$s warning</string>
    <string name="security_warn_detail_activity_title">Alert log</string>
    <string name="security_warn_video_title">Warning video</string>
    <string name="security_warn_deploy_title">Control information</string>
    <string name="toast_image_download_success">Saved to local</string>
    <string name="toast_image_download_failed">Save failed</string>
    <string name="word_base_info">Basic Information</string>
    <string name="word_device_sn">SN</string>
    <string name="title_camera_brand">Camera brand</string>
    <string name="title_label">Label</string>
    <string name="title_camera_version">Camera version</string>
    <string name="title_warn_contact">Alert contact</string>
    <string name="title_navi">Navigation</string>
    <string name="word_name">Name</string>
    <string name="word_nation">Nationality</string>
    <string name="word_phone">Phone</string>
    <string name="word_idcard">ID Card</string>
    <string name="word_describe">description</string>
    <string name="word_all">All</string>
    <string name="invalid_warn">Invalid warning</string>
    <string name="effective_warn">Effective warning</string>
    <string name="unprocessed">Unprocessed</string>
    <string name="download_security_warn_record_success">Download completed</string>
    <string name="download_security_warn_record_fail">download failed</string>
    <string name="capture_security_warn_record_success">Saved to local</string>
    <string name="capture_security_warn_record_fail">Save failed</string>
    <string name="online">Online</string>
    <string name="contact_count_tip">%dpeople total</string>
    <string name="security_warn_timeline_remark">Remarks: %1$s</string>
    <string name="security_warn_timeline_title">Contact [%1$s] confirms this alert with %2$s</string>
    <string name="security_warn_timeline_call_success">The call was successfully dialed</string>
    <string name="security_warn_timeline_call_failure">Phone call failed</string>
    <string name="security_warn_timeline_call_process">Telephone call</string>
    <string name="security_warn_timeline_sms_success">SMS sent successfully</string>
    <string name="security_warn_timeline_sms_failure">message failed to send</string>
    <string name="security_warn_timeline_sms_process">Sending a text message;</string>
    <string name="security_search_tip">Device Name/Task Name/Person Name</string>
    <string name="security_camera_info_error">Information acquisition failed, please try again</string>
    <string name="camera_contact_no_exist">Camera contact does not exist</string>
    <string name="owner_contact_no_exist">Owner contact does not exist</string>
    <string name="security_warn_video_title_transcoding">Early warning video (acquiring...)</string>
    <string name="start_include_backspace_text">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;%1$s</string>
    <string name="app_name">SensoroCity</string>
    <string name="city_name">SENSORO CITY</string>
    <string name="historical_log">History</string>
    <string name="year">&#160;year</string>
    <string name="name">name</string>
    <string name="sexs">Gender</string>
    <string name="identification_number">ID</string>
    <string name="party_a_customer_name">party A(client)</string>
    <string name="owners_name">owner\'s name</string>
    <string name="phone_num">Mobile</string>
    <string name="company_name">Corporation name</string>
    <string name="social_credit_code">Uniform Social Credit Code</string>
    <string name="signed">signed</string>
    <string name="not_signed">unsigned</string>
    <string name="all_contracts">all contracts</string>
    <string name="all_states">all</string>
    <string name="community">Community</string>
    <string name="rental_house">Rental property</string>
    <string name="factory">Factory</string>
    <string name="resident_workshop">Workshop</string>
    <string name="warehouse">Warehouse</string>
    <string name="shop_storefront">Store</string>
    <string name="the_mall">Mall</string>
    <string name="the_ohter">Others</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="signal_excellent">Signal Good</string>
    <string name="signal_good">Signal Normal</string>
    <string name="signal_weak">Signal Weak</string>
    <string name="no_signal">No Signal</string>
    <string name="alert_contact">Alarm Contact</string>
    <string name="get_the_middle_profile">Getting the configuration file</string>
    <string name="live_photo">site photos</string>
    <string name="positioned">Located</string>
    <string name="not_positioned">Unlocated</string>
    <string name="patrol_monitoring_point">Inspection Monitoring Point</string>
    <string name="inspection_content">Inspection Content</string>
    <string name="confirm_that_the_monitoring_point_is_normal">Confirm the monitoring point is normal</string>
    <string name="i_will_see_again">Cancel</string>
    <string name="normal">Normal</string>
    <string name="monitoring_point_exception_details">Monitoring Point Abnormal Details</string>
    <string name="inspection_task">Inspection Task</string>
    <string name="abnormal_reporting">abnormality</string>
    <string name="photo_recording">Photo/Video</string>
    <string name="must_select_a_tag_type">Tag type is required</string>
    <string name="upload_at_least_one_photo_or_a_video">Upload at least one photo or video</string>
    <string name="wrong_password">Password is incorrect</string>
    <string name="monitoring_point_details">Monitoring Point Detail</string>
    <string name="alert_log">Alarm Log</string>
    <string name="no_contact_added">Contact is not added</string>
    <string name="location_navigation">Location navigation</string>
    <string name="location_confirm">Calibration</string>
    <string name="cant_find_related_content">Can not find related content</string>
    <string name="enter_search_content">Enter search content</string>
    <string name="signal_test">Signal Test</string>
    <string name="signal_test_tip">" Please scan the QRCode"</string>
    <string name="frequency_random">Random</string>
    <string name="setting">Setting</string>
    <string name="determine">OK</string>
    <string name="cancel">Cancel</string>
    <string name="video_compilation">Video compilation</string>
    <string name="video_recording_failed_please_try_again">Video recording failed, please try again</string>
    <string name="video">Video</string>
    <string name="prompt">Tip</string>
    <string name="do_you_want_to_delete_this_video">Delete this video?</string>
    <string name="no_one_confirmed_the_system_automatically_confirms">&#160;hour no confirm，system auto confirms as: test/inspection</string>
    <string name="test_patrol">Test</string>
    <string name="security_risks">Security risk</string>
    <string name="contact">Contact</string>
    <string name="back_to_normal">back to normal</string>
    <string name="confirm_that_the_alert_type_app_is">confirm that the type of alarm by App</string>
    <string name="confirm_that_the_alert_type_web_is">confirm type of alarm by Web</string>
    <string name="below_the_warning_value">&#160;low level</string>
    <string name="achieve_warning_value">at threshold</string>
    <string name="the_system_calls_to">System calls to </string>
    <string name="the_system_sends_msg_to">System sends SMS to </string>
    <string name="alarm_sms_sent_tip_new">The system sends warning messages to：</string>
    <string name="alarm_sms_reciver_sent_tip_new">The system sends a recovery message to：</string>
    <string name="alarm_sms_timeout_sent_tip_new">System sends timeout SMS to：</string>
    <string name="alarm_sms_real_sent_tip_new">System sends real fire message to：</string>
    <string name="alarm_phone_sent_tip_new">The system dials the early warning telephone to：</string>
    <string name="alarm_phone_reciver_sent_tip_new">The system dials the recovery telephone to：</string>
    <string name="alarm_phone_timeout_sent_tip_new">System calls timeout to：</string>
    <string name="alarm_phone_real_sent_tip_new">The system dials the real fire alarm telephone to：</string>
    <string name="equipment_warning">device alarming</string>
    <string name="value_is">value</string>
    <string name="telephone_call">Calling</string>
    <string name="telephone_answer_success">Success</string>
    <string name="telephone_answer_failed">Failed</string>
    <string name="telephone_answer_unknow">Unknown</string>
    <string name="sms_sending">Sending</string>
    <string name="sms_received_successfully">Success</string>
    <string name="sms_received_failed">Failed</string>
    <string name="sms_received_unknow">Unknown</string>
    <string name="personal">Personal</string>
    <string name="legal_representative">Legal representative</string>
    <string name="inspection">Inspection</string>
    <string name="deploy_device_detail_upload">Upload</string>
    <string name="inspection_exception">Abnormality</string>
    <string name="open_ble_contact_device">Turn on bluetooth </string>
    <string name="open_ble_to_location">For your function to work properly, turn on Bluetooth and location services</string>
    <string name="ok_one">OK</string>
    <string name="confirm_monitor_point_exception">Verify the monitor point is functioning</string>
    <string name="uploade_exception_change_device">Report abnormal event and replace device</string>
    <string name="electric_current">Current</string>
    <string name="optional">Optional</string>
    <string name="required">Required</string>
    <string name="diameter">Diameter</string>
    <string name="nameplate_name">Nameplate name</string>
    <string name="nameplate_tag">Nameplate tag</string>
    <string name="nameplate_pic">Nameplate photo</string>
    <string name="add_all_upload">Please fill in the required fields and upload</string>
    <string name="associated_sensor">Associated sensor</string>
    <string name="permission_change_desc">Permissions have been modified, please re-login to ensure full functionality</string>
    <string name="login_later">Login later</string>
    <string name="re_login">ReLogin</string>
</resources>