<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bg_solid_ff_corner"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/confirm_monitor_point_exception"
        android:textColor="@color/c_25292d"
        android:textSize="18dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divider_width"
        android:layout_marginTop="24dp"
        android:background="@color/c_dfdfdf" />

    <TextView
        android:id="@+id/dialog_tv_exception"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:text="@string/inspection_exception"
        android:textColor="@color/c_ff8d34"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divider_width"
        android:background="@color/c_dfdfdf" />

    <TextView
        android:id="@+id/dialog_tv_upload_change_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:text="@string/uploade_exception_change_device"
        android:textColor="@color/c_ff8d34"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divider_width"
        android:background="@color/c_dfdfdf" />

    <TextView
        android:id="@+id/dialog_tv_waite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_item_white_ee_corner_left_right"
        android:paddingBottom="14dp"
        android:gravity="center"
        android:paddingTop="14dp"
        android:text="@string/i_will_see_again"
        android:textColor="@color/c_a6a6a6"
        android:textSize="16dp" />


</LinearLayout>