<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_bg_solid_ff_corner"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_permission_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/prompt"
            android:textColor="@color/c_252525"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_permission_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/permission_change_desc"
            android:textColor="@color/c_a6a6a6"
            android:textSize="14dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="24dp"
            android:background="@color/c_dfdfdf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_tip_tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/login_later"
                android:textColor="@color/c_a6a6a6"
                android:textSize="16dp"
                android:textStyle="bold" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/c_dfdfdf" />

            <TextView
                android:id="@+id/dialog_tip_tv_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/re_login"
                android:textColor="@color/c_1dbb99"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
