<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bg_solid_ff_corner"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_tip_operation_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/open_ble_contact_device"
        android:textColor="@color/c_25292d"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/dialog_tip_operation_tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/open_ble_to_location"
        android:textColor="@color/c_a6a6a6"
        android:textSize="14dp" />

    <LinearLayout
        android:id="@+id/dialog_operation_ll_et_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_corner_b6_bg_stroke"
        android:orientation="horizontal"
        android:padding="1dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/electric_current"
            android:textColor="@color/c_a6a6a6"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/dialog_operation_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:inputType="number"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/my_cursor"
            android:textColor="@color/c_252525"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:text="A"
            android:textColor="@color/c_a6a6a6"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_operation_ll_et_diameter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_corner_b6_bg_stroke"
        android:orientation="horizontal"
        android:padding="1dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/diameter"
            android:textColor="@color/c_a6a6a6"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/dialog_operation_et_diameter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:visibility="visible"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/my_cursor"
            android:inputType="number|numberDecimal"
            android:textColor="@color/c_252525"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:text="m㎡"
            android:textColor="@color/c_a6a6a6"
            android:textSize="14dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divider_height"
        android:layout_marginTop="24dp"

        android:background="@color/c_dfdfdf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_tip_operation_tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_item_white_ee_corner_left"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/ok_one"
            android:textColor="@color/c_a6a6a6"
            android:textSize="16dp" />

        <View
            android:layout_width="@dimen/view_divider_width"
            android:layout_height="match_parent"
            android:background="@color/c_dfdfdf" />

        <TextView
            android:id="@+id/dialog_tip_operation_tv_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_item_white_ee_corner_right"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/setting"
            android:textColor="@color/c_1dbb99"
            android:textSize="16dp" />

    </LinearLayout>
</LinearLayout>