<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_f4f4f4">

    <include layout="@layout/item_include_text_title" />

    <LinearLayout
        android:id="@+id/ll_info_ac_deploy_nameplate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/include_text_title_cl_root"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="铭牌编号"
            android:textColor="@color/c_a6a6a6"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="二维码铭牌"
            android:textColor="@color/c_a6a6a6"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_content_ac_deploy_nameplate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_info_ac_deploy_nameplate"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_name_ac_deploy_nameplate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:paddingEnd="20dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameplate_name"
                android:textColor="@color/c_a6a6a6"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_name_option_ac_deploy_nameplate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/required"
                android:textColor="@color/c_a6a6a6"
                android:textSize="14dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@mipmap/arrows_right" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_divider_height"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/c_dfdfdf" />

        <LinearLayout
            android:id="@+id/ll_tag_ac_deploy_nameplate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:paddingEnd="20dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameplate_tag"
                android:textColor="@color/c_a6a6a6"
                android:textSize="14dp" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/tv_tag_option_ac_deploy_nameplate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/optional"
                    android:textColor="@color/c_a6a6a6"
                    android:textSize="14dp" />

                <com.sensoro.common.widgets.TouchRecycleView
                    android:id="@+id/rc_tag_ac_deploy_nameplate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:visibility="gone"/>

            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@mipmap/arrows_right" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_divider_height"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/c_dfdfdf" />

        <LinearLayout
            android:id="@+id/ll_pic_ac_deploy_nameplate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:paddingEnd="20dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameplate_pic"
                android:textColor="@color/c_a6a6a6"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_pic_option_ac_deploy_nameplate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/optional"
                android:textColor="@color/c_a6a6a6"
                android:textSize="14dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@mipmap/arrows_right" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_association_sensor_ac_deploy_nameplate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_content_ac_deploy_nameplate"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/association_sensor"
            android:drawablePadding="8dp"
            android:text="@string/associated_sensor"
            android:textColor="@color/c_252525"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_association_sensor_option_ac_deploy_nameplate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/optional"
            android:textColor="@color/c_a6a6a6"
            android:textSize="14dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@mipmap/arrows_right" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_upload_ac_deploy_nameplate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_bg_corner_4_dfdf_shadow"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/deploy_device_detail_upload"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tv_tip_ac_deploy_nameplate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_upload_ac_deploy_nameplate"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/add_all_upload"
        android:textColor="@color/c_a6a6a6"
        android:textSize="14dp" />
</RelativeLayout>